[project]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
dependencies = [
  "aiofiles>=24.1.0",
  "asyncache>=0.3.1",
  "beautifulsoup4>=4.12.3",
  "cachetools>=5.5.0",
  "enkacard>=3.3.8",
  "enkanetworkv2-py>=2.1.4",
  "fake-useragent>=1.5.1",
  "fastapi>=0.114.2",
  "genshin",
  "matplotlib>=3.9.2",
  "more-itertools>=10.5.0",
  "numpy>=2.1.1",
  "pillow>=10.4.0",
  "pydantic>=2.9.1",
  "python-magic>=0.4.27",
  "requests>=2.32.3",
  "starrailcard",
  "uvicorn>=0.30.6",
]
description = "API to generate Enka cards"
license = { file = "LICENSE" }
name = "enka-card-api"
readme = "README.md"
requires-python = ">=3.11"
version = "1.3.1"

[tool.pyright]
exclude = [
  ".venv/**/*.py",
  ".venv/**/*.pyi",
  "ENCard/**/*.py",
  "enka_card/**/*.py",
]
typeCheckingMode = "standard"

[tool.uv.sources]
genshin = { git = "https://github.com/thesadru/genshin.py", branch = "master" }
starrailcard = { git = "https://github.com/seriaati/StarRailCard", branch = "main" }

[dependency-groups]
dev = ["ruff>=0.12.3"]
